--- a/public/index.html
+++ b/public/index.html
@@ -87,7 +87,7 @@
   <footer class="footer">
     <div class="container">
       <div class="content has-text-centered">
-        Built by <a href="https://dan.hersam.com">Dan Hersam</a>. Source on <a href="https://github.com/jaden/totp-generator">Github</a>.
+        Forked by <a href="https://payfully.app">@elmoisedecuba</a>. Source on <a href="https://github.com/elmoisedecuba/totp-generator">Github</a>.
           <a class="icon" href="https://github.com/jgthms/bulma">
             <i class="fa fa-github"></i>
           </a>
